examples/parser/invalid/var_definition_inside_while.xana
def main() do
    while 0 do
        a :: int
    end
end